@@ -3,7 +3,6 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- reverse replace still broken?
 - docs incorrect w.r.t. C+e C+j
 - what if dir search requires FTP login to list dir
 - soft wrap: dragging on last visible line throws NPEs
