@@ -6,7 +6,7 @@
  *
  * Copyright (C) 1999, 2000 mike dillon
  * Portions copyright (C) 2001 Tom Locke
- * Portions copyright (C) 2001 Slava Pestov
+ * Portions copyright (C) 2001, 2002 Slava Pestov
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -59,8 +59,7 @@ public class BoyerMooreSearchMatcher implements SearchMatcher
 				"search and replace");
 		}
 
-		generateSkipArray();
-		generateSuffixArray();
+		pattern_end = this.pattern.length - 1;
 
 		returnValue = new int[2];
 	} //}}}
@@ -131,6 +130,31 @@ public class BoyerMooreSearchMatcher implements SearchMatcher
 	 */
 	public int match(CharIndexed text, boolean reverse)
 	{
+		//{{{
+		// lazily create skip and suffix arrays for either the
+		// search pattern, or the reversed search pattern
+		int[] skip, suffix;
+		if(reverse)
+		{
+			if(back_skip == null)
+			{
+				back_skip = generateSkipArray(true);
+				back_suffix = generateSuffixArray(true);
+			}
+			skip = back_skip;
+			suffix = back_suffix;
+		}
+		else
+		{
+			if(fwd_skip == null)
+			{
+				fwd_skip = generateSkipArray(false);
+				fwd_suffix = generateSuffixArray(false);
+			}
+			skip = fwd_skip;
+			suffix = fwd_suffix;
+		} //}}}
+
 		// position variable for pattern test position
 		int pos;
 
@@ -143,10 +167,6 @@ public class BoyerMooreSearchMatcher implements SearchMatcher
 		//int last_anchor = reverseSearch
 		//	? offset + pattern.length - 1
 		//	: length - pattern.length;
-
-		// each time the pattern is checked, we start this many
-		// characters ahead of 'anchor'
-		int pattern_end = pattern.length - 1;
 
 		char ch = 0;
 
@@ -186,9 +206,9 @@ SEARCH:
 
 					// skip the greater of the two distances provided by the
 					// heuristics
-					int skip = (bad_char > good_suffix) ? bad_char : good_suffix;
-					anchor += skip;
-					text.move(skip);
+					int skip_index = (bad_char > good_suffix) ? bad_char : good_suffix;
+					anchor += skip_index;
+					text.move(skip_index);
 
 					// go back to the while loop
 					continue SEARCH;
@@ -205,6 +225,7 @@ SEARCH:
 
 	//{{{ Private members
 	private char[] pattern;
+	private int pattern_end;
 	private String replace;
 	private boolean ignoreCase;
 	private boolean beanshell;
@@ -212,8 +233,10 @@ SEARCH:
 	private NameSpace replaceNS;
 
 	// Boyer-Moore member fields
-	private int[] skip;
-	private int[] suffix;
+	private int[] fwd_skip;
+	private int[] fwd_suffix;
+	private int[] back_skip;
+	private int[] back_suffix;
 
 	private int[] returnValue;
 	//}}}
@@ -226,21 +249,24 @@ SEARCH:
 	 *  hashed alphabet how many characters can be skipped if
 	 *  a mismatch occurs on a characater hashing to that index.
 	 */
-	private void generateSkipArray()
+	private int[] generateSkipArray(boolean reverse)
 	{
 		// initialize the skip array to all zeros
-		skip = new int[256];
+		int[] skip = new int[256];
 
 		// leave the table cleanly-initialized for an empty pattern
-		if (pattern.length == 0) return;
+		if (pattern.length == 0)
+			return skip;
 
 		int pos = 0;
 
 		do
 		{
-			skip[getSkipIndex(pattern[pos])] = pos;
+			skip[getSkipIndex(pattern[reverse ? pattern_end - pos : pos])] = pos;
 		}
 		while (++pos < pattern.length);
+
+		return skip;
 	} //}}}
 
 	//{{{ getSkipIndex() method
@@ -270,19 +296,20 @@ SEARCH:
 	 *  XXX: hairy code that is basically just a functional(?) port of some
 	 *  other code i barely understood
 	 */
-	private void generateSuffixArray()
+	private int[] generateSuffixArray(boolean reverse)
 	{
 		int m = pattern.length;
 
 		int j = m + 1;
 
-		suffix = new int[j];
+		int[] suffix = new int[j];
 		int[] tmp = new int[j];
 		tmp[m] = j;
 
 		for (int i = m; i > 0; --i)
 		{
-			while (j <= m && pattern[i - 1] != pattern[j - 1])
+			while (j <= m && pattern[reverse ? pattern_end - i + 1 : i - 1]
+				!= pattern[reverse ? pattern_end - j + 1 : j - 1])
 			{
 				if (suffix[j] == 0)
 				{
@@ -312,6 +339,8 @@ SEARCH:
 				k = tmp[k];
 			}
 		}
+
+		return suffix;
 	} //}}}
 
 	//}}}
